--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 
 html {
   box-shadow: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, sans-serif;
   color: var(--dark);
 }
 
